Fix weird overflow issue with titles

--- a/_src/sass/tools/_mixins.scss
+++ b/_src/sass/tools/_mixins.scss
@@ -6,7 +6,7 @@
 }
 
 @mixin text-overflow() {
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
